fixed google map to avoid dragging on iPhone
replaced with image because JS API is ridiculous, fixes #12

--- a/site/_assets/css/app/style.css
+++ b/site/_assets/css/app/style.css
@@ -838,15 +838,9 @@ hr.page-summary-delimiter {
 #sprout-map {
   text-align: center;
   border-radius: 5px;
-  padding-top: 5px;
   -moz-box-shadow:    inset 0 0 10px black;
   -webkit-box-shadow: inset 0 0 10px black;
   box-shadow:         inset 0 0 10px black;
-}
-
-#sprout-map iframe {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 form#donate > div {
@@ -858,7 +852,7 @@ form#donate input#email {
 }
 
 form#donate input#donation_amount {
-  width: 59%;
+  width: 60%;
   margin-left: 0.5em;
 }
 
